<resources>
    <string name="app_name">lectoescritura</string>
    <string name="ivMano">Mano</string>
    <string name="btnSol">Sol</string>
    <string name="btnMama">Mamá</string>
    <string name="txtEncabezado">Pulse en la palabra que inicia igual que en la del dibujo</string>
    <string name="ivMama">ivMama</string>
    <string name="txtMano">Mano</string>
    <string name="txtOpcion">¿Cuál es la imagen correcta?</string>
    <string name="ivSol">ivSol</string>
    <string name="ivchalrujosad">ivChalrujoSad</string>
    <string name="btnback">btnBack</string>
    <string name="tvLuna">Luna</string>
    <string name="ivluna">ivLuna</string>
    <string name="ivpapa">ivPapa</string>
    <string name="ivluneta">ivLuneta</string>
    <string name="btnPapa">Papá</string>
    <string name="btnLuneta">Luneta</string>
    <string name="ivrosa">ivRosa</string>
    <string name="tvRosa">Rosa</string>
    <string name="btnRopa">Ropa</string>
    <string name="btnNave">Nave</string>
    <string name="ivropa">ivRopa</string>
    <string name="ivNave">ivNave</string>
    <string name="title_activity_nivel4">Nivel4</string>
    <string name="memorama_reinicia">Reiniciar</string>
    <string name="memorama_regresar">Regresar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>