<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mar"
    tools:context=".Nivel1_Ejercicio3">

    <TextView
        android:id="@+id/tvEncabezadoRosa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtEncabezado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivRosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivRosa"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ivrosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEncabezadoRosa"
        app:srcCompat="@drawable/rosa" />

    <TextView
        android:id="@+id/tvRosa"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tvRosa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRosa" />

    <TextView
        android:id="@+id/txOpcionRosa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtOpcion"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRosa" />

    <ImageView
        android:id="@+id/ivRopa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/ivropa"
        app:layout_constraintEnd_toStartOf="@+id/ivNave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txOpcionRosa"
        app:srcCompat="@drawable/ropa" />

    <TextView
        android:id="@+id/btnRopa"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnRopa"
        android:text="@string/btnRopa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRopa" />

    <ImageView
        android:id="@+id/ivNave"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/ivNave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivRopa"
        app:layout_constraintTop_toBottomOf="@+id/txOpcionRosa"
        app:srcCompat="@drawable/nave" />

    <TextView
        android:id="@+id/btnNave"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnNave"
        android:text="@string/btnNave"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRopa"
        app:layout_constraintTop_toBottomOf="@+id/ivNave" />

</androidx.constraintlayout.widget.ConstraintLayout>