<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mar"
    tools:context=".Nivel1_Ejercicio1">

    <TextView
        android:id="@+id/tvEncabezado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtEncabezado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivMano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMano"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ivMano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEncabezado"
        app:srcCompat="@drawable/mano" />

    <TextView
        android:id="@+id/TvMano"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtMano"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMano" />

    <TextView
        android:id="@+id/txOpcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtOpcion"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvMano" />

    <ImageView
        android:id="@+id/ivMama"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/ivMama"
        app:layout_constraintEnd_toStartOf="@+id/ivSol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txOpcion"
        app:srcCompat="@drawable/mama" />

    <ImageView
        android:id="@+id/ivSol"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/ivMano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivMama"
        app:layout_constraintTop_toBottomOf="@+id/txOpcion"
        app:srcCompat="@drawable/sol" />

    <TextView
        android:id="@+id/btnMama"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnMama"
        android:text="Mamá"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMama"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/btnSol"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnSol"
        android:text="@string/btnSol"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMama"
        app:layout_constraintTop_toBottomOf="@+id/ivSol"
        app:layout_constraintVertical_bias="0.52" />

</androidx.constraintlayout.widget.ConstraintLayout>