<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mar"
    tools:context=".Nivel1_Ejercicio2">

    <TextView
        android:id="@+id/tvEncabezadoLuna"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtEncabezado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivLuna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ivLuna"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ivluna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEncabezadoLuna"
        app:srcCompat="@drawable/luna" />

    <TextView
        android:id="@+id/tvLuna"
        android:layout_width="170dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tvLuna"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLuna" />

    <TextView
        android:id="@+id/txOpcion3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/txtOpcion"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLuna" />

    <ImageView
        android:id="@+id/ivPapa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:contentDescription="@string/ivpapa"
        app:layout_constraintEnd_toStartOf="@+id/ivLupa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txOpcion3"
        app:srcCompat="@drawable/papa" />

    <ImageView
        android:id="@+id/ivLupa"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="ivLupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPapa"
        app:layout_constraintTop_toBottomOf="@+id/txOpcion3"
        app:srcCompat="@drawable/lupa" />

    <TextView
        android:id="@+id/btnPapa"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnPapa"
        android:text="@string/btnPapa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLupa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPapa"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/btnLupa"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/letra"
        android:fontFamily="casual"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="btnLupa"
        android:text="Lupa"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPapa"
        app:layout_constraintTop_toBottomOf="@+id/ivLupa" />

</androidx.constraintlayout.widget.ConstraintLayout>